--- a/Moviles_Oscar/misapps/primeraapp/app/src/main/res/values/strings.xml
+++ b/Moviles_Oscar/misapps/primeraapp/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
-    <string name="app_name">Butano</string>
-    <string name="validar_flow">Validar Flow</string>
-    <string name="te_gustar_a_un_butanazo_en_la_cara">Te gustaría un butanazo en la cara?</string>
-    <string name="bombona_de_butano">Bombona de butano</string>
-    <string name="invalid">Chaval escribe algo al menos empanao.</string>
+    <string name="tituloApp">Ratones Gaming</string>
+    <string name="button">Button</string>
+    <string name="modelo">Modelo</string>
+    <string name="marca">Marca</string>
+    <string name="id">Id</string>
+    <string name="color">Color</string>
+    <string name="fecha_de_fabricacion">Fecha de fabricacion</string>
+    <string name="dpi">DPI</string>
+    <string name="peso">Peso</string>
+    <string name="name">Name</string>
 </resources>
